<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="appearance">Appearance</string>
    <string name="rename">Rename</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="do_you_really_want_to_delete_this_witharg">Do you really want to delete this %s?</string>
    <string name="confirm_overwrite">Confirm Overwrite</string>
    <string name="file_already_exists_overwerite">File already exists, overwrite?</string>
    <string name="browse_filesystem">Browse filesystem</string>
    <string name="title">Title</string>
    <string name="empty_directory">Empty directory</string>
    <string name="enter_name_of_folder">Enter the name of your folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_new_document">Create new document</string>
    <string name="move">Move</string>
    <string name="info">Info</string>
    <string name="file_folder_already_exists_please_use_a_different_name">File/folder already exists! Please use a different name</string>
    <string name="import_from_device">Import from device</string>
    <string name="import_">Import</string>
    <string name="append_to_witharg">Append to %s</string>
    <string name="select_folder">Select folder</string>
    <string name="edit">Edit</string>
    <string name="search_documents">Search documents</string>
    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Share to&#8230;</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="previous_match">Previous Match</string>
    <string name="next_match">Next Match</string>
    <string name="display_converted_markup">Display converted markup</string>
    <string name="editor">Editor</string>
    <string name="folders">Folders</string>
    <string name="files">Files</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="html_as_plaintext">HTML (as plain text)</string>
    <string name="document_editor_font">Document Editor Font</string>
    <string name="theme">Theme</string>
    <string name="open_existing_files_in_view_mode">Open existing files in view mode</string>
    <string name="about">About</string>
    <string name="plaintext">Plain Text</string>
    <string name="file">File</string>
    <string name="image">Image</string>
    <string name="font_size">Font Size</string>
    <string name="render_rtl_language">Render for right-to-left languages</string>
    <string name="error_cannot_create_notebook_dir__appspecific">Error: Cannot create notebook directory</string>
    <string name="last_modified_witharg">Last modified: %s</string>
    <string name="last_modified">Last modified</string>
    <string name="select_this_folder">Select this folder</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="create">Create</string>
    <string name="select_entries">Select entries</string>
    <string name="one_item_selected">One item selected</string>
    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d items selected</string>
    <string name="hide_statusbar_at_this_view">Hide the status bar in this view</string>
    <string name="hide_statusbar">Hide status bar</string>
    <string name="name">Name</string>
    <string name="url_or_path">URL / Path</string>
    <string name="insert_link">Insert link</string>
    <string name="format_link">Format link</string>
    <string name="insert_image">Insert Image</string>
    <string name="contributors">Contributors</string>
    <string name="save_location">Save location</string>
    <string name="saved_location_to">Saved to %s</string>
    <string name="select_storage_folder">Select storage folder</string>
    <string name="licenses">Licenses</string>
    <string name="changelog">Changelog</string>
    <string name="more_info">More info</string>
    <string name="show_license_of_the_app">Show license of the app</string>
    <string name="show_third_party_licenses">Show 3rd party licenses</string>
    <string name="language_change_restart_description">Change language of this app. Restart app for changes to take effect</string>
    <string name="language">Language</string>
    <string name="storage_permission_required">Storage permission required to read and write files</string>
    <string name="open_with">Open with</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="deleteme____1">Name</string>
    <string name="size">Size</string>
    <string name="reverse_order">Reverse order</string>
    <string name="contribute">Contribute</string>
    <string name="project_page">Project page</string>
    <string name="press_back_again_to_exit">Press \'Back\' again to exit</string>
    <string name="exit">Exit</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="more">More</string>
    <string name="notebook">Notebook</string>
    <string name="help">Help</string>
    <string name="todo_list">To-Do List</string>
    <string name="task">Task</string>
    <string name="context">Context</string>
    <string name="list">List</string>
    <string name="priority">Priority</string>
    <string name="history">History</string>
    <string name="sync">Sync</string>
    <string name="search_or_custom">Search / Custom</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="due_date">Due date</string>
    <string name="current_date">Current date</string>
    <string name="archive">Archive</string>
    <string name="add_task">Add task</string>
    <string name="add_x_witharg">Add %s</string>
    <string name="document_to_be_loaded_and_saved_as_witharg">Document to be loaded and saved as "%s"</string>
    <string name="save_or_not">Do you want to save the changes you made?</string>
    <string name="reload_or_not">Do you want to abandon the changes and reload?</string>
    <string name="refresh">Refresh</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="tried_to_create_shortcut_for_this_notice">Tried to create a shortcut to your home screen. Note that some launchers may not support this.</string>
    <string name="file_not_in_save_path_do_import_notice__appspecific">The selected file is not located in the app\'s notebook directory. Do you want to copy it to the current folder? This will overwrite any existing file with the same name.</string>
    <string name="file_not_in_current_folder_do_copy__appspecific">The file is not located in the current folder. Do you want to copy it to the current folder? This will overwrite any existing file with the same name.</string>
    <string name="files_and_folders">Files and folders</string>
    <string name="document_browser">Document browser</string>
    <string name="file_browser">File Browser</string>
    <string name="set_due_date">Set due date</string>
    <string name="insert_replace_date">Insert date</string>
    <string name="create_note" needed="false">Create Note</string>
    <string name="special_documents" needed="false">Special documents</string>
    <string name="keep_screen_on" needed="false">Keep screen on</string>
    <string name="disallow_screenshots">Disallow screenshots</string>
    <string name="back_to_previous_folder" needed="false">Back to previous folder</string>
    <string name="app_settings" needed="false">App Settings</string>
    <string name="editor_settings" needed="false">Editor Settings</string>
    <string name="remember_last_folder_location_on_startup" needed="false">Remember last folder location on startup</string>
    <string name="number_of_files_witharg" needed="false">Number of files: %d</string>
    <string name="app_wide">App-wide</string>
    <string name="main_view">Main View</string>
    <string name="overall_theme_used_in_app">The overall theme used in the app</string>
    <string name="flat_top_bottom_bars">Flat top and bottom bars</string>
    <string name="flat_top_bottom_bars_description">Use the app background color for top and bottom bars</string>
    <string name="show_tab_titles">Show tab titles</string>
    <string name="show_tab_titles_description">Show text labels in the main bottom bar</string>
    <string name="file_browser_divider_lines">File browser divider lines</string>
    <string name="file_browser_divider_lines_description">Show divider lines between file browser entries</string>
    <string name="remember_last_directory">Remember last directory</string>
    <string name="syntax_highlighting">Syntax Highlighting</string>
    <string name="highlighting_delay">Highlighting delay</string>
    <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Delay in milliseconds for highlighting refresh. A lower value will start highlighting earlier, but it will drain your battery and may slow down the app on older devices.</string>
    <string name="highlighting_enabled_or_not__appspecific">Control whether entered text should be highlighted or not</string>
    <string name="control_font_size_in_editor">Control the font size used in the editor</string>
    <string name="textactions_show_useful_actions_description__appspecific">Show a bar with handy buttons on bottom. These text actions modify the text or run an action based on the text.</string>
    <string name="load_last_opened_folder_at_startup">Load the last opened folder at startup</string>
    <string name="format">Format</string>
    <string name="contexts">Contexts</string>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="none">None</string>
    <string name="other">Other</string>
    <string name="empty_file">Empty file</string>
    <string name="break_page_pdf_print">Break page (PDF/Printing)</string>
    <string name="underline">Underline</string>
    <string name="underline_hex_color_wether_or_not_to_description__appspecific">Whether to underline hex color codes according to color</string>
    <string name="underline_hex_color_codes">Underline Hex Color Codes</string>
    <string name="insert_current_date_when_starting_new_task">Insert the current date when starting a new task</string>
    <string name="tasks_with_todays_date">Tasks with today\'s date</string>
    <string name="append_contexts_and_projects">Append contexts and projects</string>
    <string name="clipboard">Clipboard</string>
    <string name="details">Details</string>
    <string name="gallery_picture">Gallery picture</string>
    <string name="camera_picture">Camera picture</string>
    <string name="description">Description</string>
    <string name="edit_picture">Edit picture</string>
    <string name="close">Close</string>
    <string name="go_to">Go to</string>
    <string name="favourite">Favourite</string>
    <string name="record_audio">Record Audio</string>
    <string name="clear_selection">Clear selection</string>
    <string name="line_based_search">Line based search</string>
    <string name="no_results">No results</string>
    <string name="toggle_find_replace">Toggle Find/Replace</string>
    <string name="new_line">New Line</string>
    <string name="match_case">Match Case</string>
    <string name="match_whole_word">Match Whole Word</string>
    <string name="use_regular_expression">Use Regular Expression</string>
    <string name="find_in_selection">Find in Selection</string>
    <string name="preserve_case">Preserve Case</string>
    <string name="replace">Replace</string>
    <string name="replace_once">Replace (1)</string>
    <string name="replace_all">Replace all</string>
</resources>