<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained 2017-2025 by Gregor Santner <gsantner AT mailbox DOT org>
 *   License of this file: Apache 2.0
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
#########################################################*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/favourite"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourite_remove"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favourite"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fs_copy_to_clipboard"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/clipboard"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename_selected_item"
        android:icon="@drawable/ic_gs_rename_black_24dp"
        android:title="@string/rename"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info_selected_item"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/details"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_selected_items"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_move_selected_items"
        android:icon="@drawable/ic_gs_file_move_black_24dp"
        android:title="@string/move"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy_selected_items"
        android:icon="@drawable/ic_baseline_file_copy_24"
        android:title="@string/copy"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_shortcut"
        android:icon="@drawable/ic_widgets_black_24dp"
        android:title="@string/create_shortcut"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_files"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to"
        android:layout_width="match_parent"
        android:icon="@drawable/ic_folder_white_24dp"
        android:title="@string/go_to"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:layout_width="match_parent"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_file_white_24dp"
        android:title="@string/import_from_device"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_all"
        android:icon="@drawable/ic_check_circle_24dp"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_selection"
        android:icon="@drawable/ic_baseline_clear_24"
        android:title="@string/clear_selection"
        app:showAsAction="never" />
</menu>
