<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/context_menu_move"
        android:icon="@drawable/ic_input_white_24dp"
        android:title="@string/move"
        app:showAsAction="always" />

    <item
        android:id="@+id/context_menu_rename"
        android:icon="@drawable/ic_local_offer_white_24dp"
        android:title="@string/rename"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/context_menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>
