<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained by Gregor Santner, 2017-
 *   https://gsantner.net/
 *
 *   License of this file: Apache 2.0 (Commercial upon request)
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
#########################################################*/
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="8dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:paddingBottom="16dp">

        <EditText
            android:id="@+id/ui__select_path_dialog__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="3" />

        <EditText
            android:id="@+id/ui__select_path_dialog__url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_or_path"
            android:inputType="textUri|textMultiLine"
            android:maxLines="3" />

        <Button
            android:id="@+id/ui__select_path_dialog__browse_filesystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_insert_drive_file_black_24dp"
            android:drawableLeft="@drawable/ic_insert_drive_file_black_24dp"
            android:text="@string/browse_filesystem" />

        <Button
            android:id="@+id/ui__select_path_dialog__camera_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_photo_camera_black_24dp"
            android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
            android:text="@string/camera_picture" />

        <Button
            android:id="@+id/ui__select_path_dialog__gallery_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_image_black_24dp"
            android:drawableLeft="@drawable/ic_image_black_24dp"
            android:text="@string/gallery_picture" />

        <Button
            android:id="@+id/ui__select_path_dialog__edit_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_crop_black_24dp"
            android:drawableLeft="@drawable/ic_crop_black_24dp"
            android:text="@string/edit_picture" />

        <Button
            android:id="@+id/ui__select_path_dialog__record_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_keyboard_voice_black_24dp"
            android:drawableLeft="@drawable/ic_keyboard_voice_black_24dp"
            android:text="@string/record_audio" />
    </LinearLayout>

</ScrollView>
