<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_preview"
        android:icon="@drawable/ic_preview_light"
        android:title="@string/preview"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_white_24dp"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo_white_24dp"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>
